# danmachi_dnd_combat_simulator

./: LICENSE  LICENSE.md  README.md  example_trigger_configs.json  expression_resolution.ipynb  pyproject.toml  requirements.txt  test_category_targeting.py  test_dummy.py  test_new_systems.py  test_targeting.py
data/: abilities.json  actions.json  armors.json  attacks.json  character_classes.json  character_races.json  characters.json  enemies_danmachi_f1_f10.json  player.json  spells.json  weapon_variants.json  weapons.json  weapons_natural.json  weapons_wielded.json
notebooks/: notebook.ipynb  tests.ipynb
simulator/: __init__.py  actions.py  behaviour_leaves.py  behaviour_tree.py  character.py  character_class.py  character_race.py  cli_interface.py  cli_prompt.py  colors.py  combat_manager.py  constants.py  content.py  damage.py  effect.py  effect_manager.py  interfaces.py  main.py  npc_ai.py  requirements.txt  utils.py
simulator/actions/: __init__.py  ability_action.py  attack_action.py  base_action.py  spell_action.py
simulator/actions/abilities/: __init__.py  ability_buff.py  ability_debuff.py  ability_factory.py  ability_heal.py  ability_healing.py  ability_offensive.py  ability_serializer.py  ability_utility.py  base_ability.py
simulator/actions/attacks/: __init__.py  attack_factory.py  attack_serializer.py  base_attack.py  natural_attack.py  weapon_attack.py
simulator/actions/spells/: __init__.py  base_spell.py  spell_attack.py  spell_buff.py  spell_debuff.py  spell_factory.py  spell_heal.py  spell_healing.py  spell_offensive.py  spell_serializer.py
simulator/character/: __init__.py  character_actions.py  character_class.py  character_concentration.py  character_display.py  character_effects.py  character_inventory.py  character_race.py  character_serialization.py  character_stats.py  main.py
simulator/combat/: __init__.py  combat_manager.py  damage.py  npc_ai.py
simulator/core/: __init__.py  constants.py  content.py  dice_parser.py  error_handling.py  logging.py  sheets.py  utils.py  validation.py
simulator/data/: actions.json  armor_data.json  attacks.json  character_classes.json  character_races.json  characters.json  enemies.json  enemies_danmachi_f1_f10.json  player.json  spell_attack_data.json  spell_buff_data.json  spell_debuff_data.json  spell_heal_data.json  weapon_data.json  weapons.json
simulator/effects/: __init__.py  base_effect.py  concentration_manager.py  damage_effect.py  damage_over_time_effect.py  effect.py  effect_factory.py  effect_manager.py  effect_serialization.py  effect_serializer.py  event_system.py  healing_effect.py  healing_over_time_effect.py  incapacitating_effect.py  incapacitation_effect.py  modifier.py  modifier_effect.py  trigger_effect.py
simulator/entities/: character.py  character_class.py
simulator/items/: __init__.py  armor.py  weapon.py  weapon_variant.py
simulator/ui/: __init__.py  cli_interface.py
tests/: __init__.py
tests/effects/: test_damage_over_time_effect.py  test_event_triggering.py  test_healing_over_time_effect.py  test_incapacitating_effect.py  test_modifier_effect.py  test_trigger_effect.py
